02/001/soa-02-001-vpc.yaml
AWSTemplateFormatVersion: 2010-09-09

Parameters:
  AZ:
    Type: String
    
  CidrBlock1:
    Type: String
    
  CidrBlock2:
    Type: String
    
  HTTPPort:
    Type: Number
    
  HTTPSPort:
    Type: Number
    
  iSCSIPort:
    Type: Number
    
  StorageGatewayPort1:
    Type: Number
    
  StorageGatewayPort2:
    Type: Number
    
  StorageGatewayPort3:
    Type: Number
    
  StorageGatewayPort4:
    Type: Number
    
  StorageGatewayPort5:
    Type: Number

  Prefix:
    Type: String
    
  VPCCidrBlock:
    Type: String
    

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCidrBlock
      EnableDnsHostnames: true
      EnableDnsSupport: true
      
  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Ref AZ
      CidrBlock: !Ref CidrBlock1
      VpcId: !Ref VPC
      
  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Ref AZ
      CidrBlock: !Ref CidrBlock2
      VpcId: !Ref VPC
  
      
  IGW:
    Type: AWS::EC2::InternetGateway

  IGWAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref IGW
      
  EIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
          
  NATGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt EIP.AllocationId
      SubnetId: !Ref PublicSubnet
      
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  RouteToInternet:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGW

  PublicSubnetPublicRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      
  RouteToNATGateway:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway
  
  PrivateSubnetPrivateRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet
      RouteTableId: !Ref PrivateRouteTable
      
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${Prefix}-InstanceSecurityGroup
      GroupDescription: Deny All.
      VpcId: !Ref VPC
        
  SSMEndpointSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${Prefix}-SSMEndpointSecurityGroup
      GroupDescription: Allow HTTPS from InstanceSecurityGroup.
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref HTTPSPort
          ToPort: !Ref HTTPSPort
          SourceSecurityGroupId: !Ref InstanceSecurityGroup
          
  StorageGatewaySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${Prefix}-StorageGatewaySecurityGroup
      GroupDescription: Allow Storage Gateway Traffic.
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref HTTPPort
          ToPort: !Ref HTTPPort
          SourceSecurityGroupId: !Ref InstanceSecurityGroup
        - IpProtocol: tcp
          FromPort: !Ref iSCSIPort
          ToPort: !Ref iSCSIPort
          SourceSecurityGroupId: !Ref InstanceSecurityGroup
          
  StorageGatewayEndpointSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${Prefix}-StorageGatewayEndpointSecurityGroup
      GroupDescription: Allow Storage Gateway Traffic.
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref HTTPSPort
          ToPort: !Ref HTTPSPort
          SourceSecurityGroupId: !Ref InstanceSecurityGroup
        - IpProtocol: tcp
          FromPort: !Ref StorageGatewayPort1
          ToPort: !Ref StorageGatewayPort1
          SourceSecurityGroupId: !Ref InstanceSecurityGroup
        - IpProtocol: tcp
          FromPort: !Ref StorageGatewayPort2
          ToPort: !Ref StorageGatewayPort2
          SourceSecurityGroupId: !Ref InstanceSecurityGroup
        - IpProtocol: tcp
          FromPort: !Ref StorageGatewayPort3
          ToPort: !Ref StorageGatewayPort3
          SourceSecurityGroupId: !Ref InstanceSecurityGroup
        - IpProtocol: tcp
          FromPort: !Ref StorageGatewayPort4
          ToPort: !Ref StorageGatewayPort4
          SourceSecurityGroupId: !Ref InstanceSecurityGroup
        - IpProtocol: tcp
          FromPort: !Ref StorageGatewayPort5
          ToPort: !Ref StorageGatewayPort5
          SourceSecurityGroupId: !Ref InstanceSecurityGroup
      
      
Outputs:
  VPC:
    Value: !Ref VPC
      
  PrivateSubnet:
    Value: !Ref PrivateSubnet
      
  PublicSubnet:
    Value: !Ref PublicSubnet
  
  InstanceSecurityGroup:
    Value: !Ref InstanceSecurityGroup
      
  SSMEndpointSecurityGroup:
    Value: !Ref SSMEndpointSecurityGroup
      
  StorageGatewaySecurityGroup:
    Value: !Ref StorageGatewaySecurityGroup
      
  StorageGatewayEndpointSecurityGroup:
    Value: !Ref StorageGatewayEndpointSecurityGroup
      
  AZ:
    Value: !Ref AZ
